# tutor-mfe

./: .gitlab-ci.yml  .hatch_build.py  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: sync.yml  test.yml  update-site-lockfile.yml
changelog.d/: 20230526_152532_regis.md  20230623_101803_arbrandes_dockerfile_patches_per_mfe.md  20230627_090554_arbrandes_cache_invalidation.md  20230627_162842_regis.md  20230628_084907_arbrandes_cache_invalidation_take_2.md  20230802_121750_regis_single_dev_container.md  20230802_123027_regis_fix_dev_profile_link.md  20230815_205312_tmisilo_fix_issue_139.md  20230819_190050_kiran.767.767_settings_typo_fix.md  20230828_101247_moises.gonzalez_pre_build_patch.md  20230914_125107_illia_caddyfile_patch_master.md  20231002_172323_codewithemad_config_loaded_action.md  20231003_133500_dave_remove_trailing_slash.md  20231116_110038_arbrandes_add_learner_dashboard.md  20231205_164707_regis_fix_3rd_party_build.md  20231206_170625_regis_get_mfe.md  20231206_183103_arbrandes_fix_trailing_slash.md  20231208_112435_danyal.faheem_mfe_post_npm_build_patch.md  20231208_112710_regis_nightly_auto_build_mfe.md  20231208_132545_mpwheel_mfe_dev_ports.md  20231208_142032_arbrandes_nightly.md  20231208_193911_regis_mfe_refs_for_master.md  20231212_131405_danyal.faheem_document_mfe_patches_catalog.md  20231220_054305_moisesgsalas.add_docker_final_patch.md  20240108_150445_romulo_add_course_authoring_mfe_base_url.md  20240109_111839_i_atlas_options.md  20240202_172501_i_atlas_for_all.md  20240206_100528_arbrandes_fix_dev_runtime_config.md  20240213_141934_danyal.faheem_fix_course_authoring_mfe_removal.md  20240220_180043_hina.khadim_mfe_url_issue.md  20240221_114505_danyal.faheem_add_learner_dashboard_dev_to_ci.md  20240228_111818_arbrandes_nightly.md  20240301_160746_romulo_add_course_authoring_url_mfe_config.md  20240305_113936_moises.gonzalez_fix_dev_settings_rendering.md  20240614_162207_regis_patch_dockerfile_common.md  20240621_123709_rediris_customize_dev_docker_image_tag.md  20240726_181354_regis_faster_init.md  20240820_112614_hina.khadim_account_mfe_patch.md  20240920_143739_regis_authoring_rename.md  20241010_090821_arbrandes_node_20_upgrade.md  (+24 more)
tutormfe/: __about__.py  commands.py  helpers.py  hooks.py  plugin.py
tutormfe/patches/: caddyfile  dev-docker-compose-jobs-services  k8s-deployments  k8s-services  kustomization-configmapgenerator  lms-env  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-prod-services  local-docker-compose-services  mfe-dockerfile-pre-npm-build-account  mfe-dockerfile-pre-npm-install-template-site  nginx-extra  openedx-cms-development-settings  openedx-cms-production-settings  openedx-common-settings  openedx-lms-common-settings  openedx-lms-development-settings  openedx-lms-production-settings
tutormfe/templates/mfe/apps/env/: development.env  production.env
tutormfe/templates/mfe/apps/mfe/: Caddyfile  module.config.js  webpack.dev-tutor.config.js  webpack.dev.config.js
tutormfe/templates/mfe/hooks/lms/: init
tutormfe/templates/mfe/partials/: env.config.compat.jsx
tutormfe/templates/mfe/tasks/lms/: init
tutormfe/templates/mfe/tasks/mfe/: npm-install.sh
